example/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: my-app
spec:
  controller: k8s.io/ingress-nginx
